# obsidian_workspace

./: .gitignore  README.md  package-lock.json  package.json  start-all.cmd  stop-all.cmd
apps/service/: pyproject.toml
apps/service/adapters/: filesystem_vault_adapter.py  filesystem_vault_committer.py  local_import_task_runner.py  openai_compatible_provider.py  sqlite_index_repository.py  sqlite_provider_repository.py  sqlite_session_repository.py  sqlite_source_repository.py  sqlite_task_repository.py  sqlite_vault_repository.py  windows_credential_manager.py  windows_directory_picker.py  windows_import_picker.py
apps/service/api/: __init__.py  errors.py  main.py  runtime.py
apps/service/application/: __init__.py  directory_selections.py  import_selections.py  indexing.py  ingest.py  knowledge_graph.py  local_session.py  policies.py  providers.py  sessions.py  vaults.py
apps/service/domain/: __init__.py  candidate_links.py  classification.py  derived_notes.py  evidence.py  indexing.py  knowledge_graph.py  metadata_tags.py  policies.py  providers.py  review_commits.py  sessions.py  sources.py  tasks.py  vaults.py
apps/service/ports/: credential_store.py  graph_repository.py  import_picker.py  index_repository.py  provider_authorization_invalidator.py  provider_client.py  provider_repository.py  session_repository.py  source_repository.py  task_repository.py  task_worker.py  vault_committer.py  vault_filesystem.py  vault_policy_repository.py  vault_repository.py
apps/service/workers/: __init__.py  document_ocr.py  document_parser.py  import_scanner.py  (+1 more)
(+58 files in other folders)
