[project]
name = "obsidian-platform-service"
version = "0.1.0"
description = "Loopback service for the Obsidian personal knowledge platform"
requires-python = "==3.11.15"
dependencies = [
  "fastapi==0.139.2",
  "sqlalchemy==2.0.51",
  "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "ruff==0.14.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
